--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-ktx:1.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -59,5 +60,20 @@ dependencies {
     //okhttp3 logging interceptor
     implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
     implementation("com.squareup.okhttp3:okhttp:4.10.0")
+
+
+    implementation 'org.apache.mina:mina-core:3.0.0-M2'
+
+    implementation 'org.apache.sshd:sshd-core:2.1.0'
+
+    implementation 'org.apache.sshd:sshd-putty:2.1.0'
+
+    implementation 'org.apache.sshd:sshd-common:2.1.0'
+
+    implementation 'org.slf4j:slf4j-api:1.7.30'
+
+    implementation 'org.slf4j:slf4j-simple:1.6.4'
+
+
 
 }
