--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,13 @@
         android:theme="@style/Theme.ATGC_module"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".MolarityActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NormalityActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +30,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ATGCActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
