--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +16,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ATGC_module"
         tools:targetApi="31">
+        <activity
+            android:name=".DilutionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MolalityActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ReverseComplementActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DNA_cuttingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GC_percentActivity"
+            android:exported="false" />
         <activity
             android:name=".MolarityActivity"
             android:exported="false" />
